# Monorepo-RAG-Fine-tuning

./: .env.deploy.example  .env.example  .gitignore  README.md  REVIEWS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  nightly.yml
config/: defaults.yaml  eval_en.yaml  eval_vi.yaml  stage1_mixed_en_vi.yaml  stage2_vi_refine.yaml
deploy/: README.md  docker-compose.yml
deploy/indexer/: Dockerfile
deploy/reader/: Dockerfile
deploy/synthesis/: Dockerfile
docs/: PROJECT_GUIDE.md
eval/: questions.jsonl  rag_eval_latest.json  rag_eval_latest_limited.json  reader_eval_latest.json  test_eval.json
scripts/: fetch_artifacts.sh  prepare_multilingual_qa.py  sync_artifacts.sh
src/rag_chatbox/: cli.py  config.py  evaluate_eval_set.py  ingestion.py  main.py  prompt_template.py  rag_pipeline.py  reader_distilbert.py  retrieval.py
src/rag_chatbox/services/: __init__.py  indexer_job.py  reader_service.py  synthesis_service.py
src/rag_fine_tuning_monorepo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/training/: __init__.py  cli.py  config.py  data_loader.py  dataset.py  evaluate.py  export.py  flatten_squad.py  metrics.py  model_config.py  modeling.py  optimizer.py  qa_head.py  trainer.py  vietnamese_utils.py
tests/: test_eval_eval_set.py  test_export_artifact.py  test_rag_pipeline.py  test_rag_reader.py  test_retrieval.py  test_services_smoke.py  test_trainer_init_checkpoint.py  test_training_metrics.py  test_training_pipeline.py
