[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-fine-tuning-monorepo"
version = "0.1.0"
description = "Monorepo for DistilBERT fine-tuning and artifact-driven RAG chatbox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0.0",
  "transformers>=4.35.0",
  "datasets>=2.14.0",
  "accelerate>=0.24.0",
  "evaluate>=0.4.0",
  "pandas>=1.5.0",
  "numpy>=1.24.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3.0",
  "underthesea>=1.4.2",
  "pyvi>=0.1",
  "onnx>=1.14.0",
  "onnxruntime>=1.16.0",
  "optimum>=1.14.0",
  "tqdm>=4.66.0",
  "langchain-community>=0.4.1",
  "langchain-core>=1.3.3",
  "langchain-ollama>=1.1.0",
  "langchain-text-splitters>=1.1.2",
  "faiss-cpu>=1.13.2",
  "python-dotenv>=1.2.2",
  "pypdf>=6.11.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
]

[project.scripts]
rag-ft-train = "training.cli:train_main"
rag-ft-eval = "training.cli:eval_main"
rag-ft-export = "training.cli:export_main"
rag-chatbox = "rag_chatbox.cli:run_cli"
rag-eval = "rag_chatbox.evaluate_eval_set:main"
rag-indexer = "rag_chatbox.services.indexer_job:main"
rag-reader-service = "rag_chatbox.services.reader_service:main"
rag-synthesis-service = "rag_chatbox.services.synthesis_service:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["training*", "rag_chatbox*"]
